crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchor_at_sequence_start.txt
Q = {
  .
  (a)
}
==== diagnostics ====
error: anchor needs an enclosing node
 --> query.ptk:2:3
  |
2 |   .
  |   ^
  |
help: wrap in a named node: `(parent . (child))`
==== symbols ====
